@@ -30,7 +30,7 @@ namespace Mono.Linker {
 
 	public enum MethodAction {
 		Nothing,
-		ParseIfLinked,
+		Parse,
 		ForceParse
 	}
 }
