@@ -1,0 +1,5 @@
+<linker>
+	<assembly fullname="Library">
+		<type fullname="Foo" />
+	</assembly>
+</linker>
